<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.UserOperation"
    android:gravity="center"
    android:background="@color/surfaceVariant">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:src="@drawable/firebase_console"
            android:layout_margin="12dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:fontFamily="@font/fira_mono"
            android:textColor="@color/secondary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_home"
        android:elevation="5dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/UserImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:src="@drawable/plus"
            android:layout_margin="17dp"
            app:civ_border_color="@color/secondary"
            app:civ_border_width="1dp"
            android:elevation="0dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:hint="@string/user_name"
            app:boxStrokeColor="@color/secondary"
            style="@style/Widget.Material3.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:hint="@string/user_email"
            app:boxStrokeColor="@color/secondary"
            android:layout_marginTop="12dp"
            style="@style/Widget.Material3.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            android:hint="@string/user_designation"
            app:boxStrokeColor="@color/secondary"
            android:layout_marginTop="12dp"
            style="@style/Widget.Material3.TextInputLayout.FilledBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserDesignation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/UserAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_user"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/inverseOnSurface"
            android:fontFamily="@font/fira_mono"
            android:textSize="22sp"
            android:background="@drawable/bg_back"
            android:backgroundTint="@color/inverseSurface"
            android:layout_marginTop="42dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:elevation="5dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ShowUserList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_users_list"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/secondary"
            android:fontFamily="@font/fira_mono"
            android:textSize="19sp"
            android:layout_margin="22dp"
            android:elevation="5dp"/>

    </LinearLayout>
</LinearLayout>