<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStarted.GoogleSignIn">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/FireDbImg"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/firebase_console"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/FireDbName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_mono"
        android:text="@string/app_name"
        android:textColor="@color/light_secondary"
        android:textSize="32sp"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@id/FireDbImg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_background"
        android:backgroundTint="@color/light_onPrimary"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/FireDbName"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:elevation="7dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:layout_gravity="center"
            android:layout_margin="12dp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gsign_text"
            android:fontFamily="@font/fira_mono"
            android:gravity="center"
            android:textColor="@color/light_scrim"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/GoogleSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            app:cornerRadius="12dp"
            app:rippleColor="@color/light_primary"
            android:fontFamily="@font/fira_mono"
            android:textStyle="bold"
            app:backgroundTint="@color/light_secondary"
            android:layout_marginTop="12dp"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="32dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>